--- a/server/test.beego.com/conf/app.conf.sample
+++ b/server/test.beego.com/conf/app.conf.sample
@@ -1,3 +1,14 @@
 appname = test.beego.com
 httpport = 8080
 runmode = dev
+
+# MySQL配置-主库
+db_w_host=127.0.0.1
+#您的数据库端口
+db_w_port=3306
+#您的数据库用户名
+db_w_username=root
+# 您的数据库密码
+db_w_password=135246
+#您使用的数据库
+db_w_database=mbook
